# ADSL2-PCI-Card-Single-Port-ADSL-Modem

./: README.md
opensource/isdn4k-utils-ori/FAQ/: Makefile.in  configure  configure.in  i4lfaq.sgml
opensource/isdn4k-utils-ori/FAQ/_example/: ipfwadm.txt
opensource/isdn4k-utils-ori/FAQ/_howto/: gsm_over_v110.txt  i4l_ipx2.txt  i4l_ipx3.txt  lan_route.txt  masquerade2.txt  pppd_ipx_howto.txt  vbox_sound.txt
opensource/isdn4k-utils-ori/capi20/: Makefile.am  Makefile.in  capi20.c  capiutils.h  configure  configure.in  ltconfig  mkinstalldirs
opensource/isdn4k-utils-ori/capiinfo/: .cvsignore  Makefile.am  Makefile.cvs  Makefile.in  mkinstalldirs
opensource/isdn4k-utils-ori/capiinit/: Makefile.am  capi.conf  config.h.in
opensource/isdn4k-utils-ori/doc/: Configure.help  Makefile.in  configure.in  isdn_cause.man.in  ttyI.man.in
opensource/isdn4k-utils-ori/eicon/: INSTALL  README  configure.in  eiconctrl.man.in
opensource/isdn4k-utils-ori/eicon/divautil/: cardtype.h  cau_1tr6.h  diload.h  diva.h  divalogdchr.c  idilog.c  lindiload.c  lindownload.c  linux.h  load.h  loglib.c
opensource/isdn4k-utils-ori/eicon/firmware/: eicon_firm.tgz
opensource/isdn4k-utils-ori/eicon/include/: eicon.h  sys.h
opensource/isdn4k-utils-ori/hisax/: Makefile  configure.in  hisaxctrl
opensource/isdn4k-utils-ori/imon/: Makefile  config.h  config.status  configure  configure.in
opensource/isdn4k-utils-ori/ipppstats/: Makefile  config.status  configure.in  ipppstats.man
opensource/isdn4k-utils-ori/isdnctrl/: acconfig.h  config.h  config.h.in  config.status  configure  configure.in  ctrlconf.c  ctrltimru.c  ctrltimru.h  isdn_dwabclib.h  isdnctrl.man.in
opensource/isdn4k-utils-ori/loop/: Makefile.in  configure.in  loopctrl.c
opensource/isdn4k-utils-ori/pcbit/: Makefile.in  configure.in  pcbitctl.c
opensource/isdn4k-utils-ori/rcapid/: .cvsignore  Makefile  Makefile.am  configure  rcapicmd.h  rcapid.c
opensource/isdn4k-utils-ori/vbox/: .Config.in  .compile  INSTALL  acinclude.m4  aclocal.m4  configure.in  mkinstalldirs
opensource/isdn4k-utils-ori/vbox/doc/: Makefile.am  autovbox.man  vbox.man  vboxconvert.man  vboxctrl.man  vboxd.conf.man  vboxd.man  vboxplay.man  vboxrc.man  vboxtoau.man
opensource/isdn4k-utils-ori/vbox/examples/: beep.msg.example  vbox.conf.example  vboxd.conf.example  vboxgetty.conf.example
opensource/isdn4k-utils-ori/vbox/src/: Makefile.in  config.h.in  lock.c  lock.h  log.h  modem.c  modem.h  perms.c  rcgetty.c  script.h  streamio.c  streamio.h  vboxconvert.c  vboxconvert.h  vboxctrl.h  vboxd.h  voice.c  voice.h
opensource/isdn4k-utils-ori/vbox/utils/: Makefile.in  mkdev  mksed  vboxmail.in  vboxplay.in
opensource/isdn4k-utils-ori/vbox3/: INSTALL-CVS  Makefile.am  acinclude.m4  mkinstalldirs
opensource/isdn4k-utils-ori/vbox3/vboxgetty/: AUTHORS  audio.c  audio.h  breaklist.c  breaklist.h  control.c  control.h  lock.h  log.c  log.h  modem.c  tclscript.c  tclscript.h  vboxrc.c  voice.c  voice.h
opensource/isdn4k-utils/act2000/: actctrl.man.in  configure  configure.in
opensource/isdn4k-utils/avmb1/: .cvsignore  Makefile.in  avmcapictrl.c  configure.in
opensource/isdn4k-utils/capifax/: .cvsignore  Makefile.am  Makefile.in  acconfig.h  c20msg.c  capifax.c  capifaxrcvd.c  config.h.in  configure.in  connect.h  contr.h  data.h  fax.c  fax.h  id.c  init.c  mkinstalldirs  msg.c
opensource/isdn4k-utils/capiinfo/: capiinfo.8  capiinfo.c  config.h.in  configure  configure.in
opensource/isdn4k-utils/capiinit/: .cvsignore  Makefile.in  capiinit.c  configure  configure.in  mkinstalldirs
opensource/isdn4k-utils/eurofile/: .Config.in  CHANGES  COPYING  COPYING.authlib  Makefile  TODO  configure.in
opensource/isdn4k-utils/eurofile/doc/: FAQ  INTERWORKING  INTERWORKING.de  README  README.old  eft_wuauth.5  eft_xferlog.5
opensource/isdn4k-utils/eurofile/examples/: eft.conf.in
opensource/isdn4k-utils/eurofile/scripts/: eftd.sh.in  oops.sh
opensource/isdn4k-utils/eurofile/src/: README
opensource/isdn4k-utils/icn/: configure.in  icn.h  icnctrl.man.in
opensource/isdn4k-utils/ipppd/: .Config.in  NOTES.IPPPD  README.mschap80.ORIG  auth.c  cbcp.c  chap.h  chap_ms.c  chap_ms.h  config.h.in  configure.in  environ.h  fsm.c  ipxcp.c  ipxcp.h  isexpired.c  lcp.c  lcp.h  md4.c  md4.h  md5.c  md5.h  patchlevel.h  pathnames.h.in  radius.c  readpw.c  route.h  sys-linux.c  upap.h
opensource/isdn4k-utils/iprofd/: configure  configure.in  iprofd.man.in
opensource/isdn4k-utils/isdnlog/: .country-alias  .depend  BUGS  CREDITS  Isdn  NEWS  README.Internationalization  TODO  TelDa.Net.i  aclocal.m4  configure  configure.in  policy.h.in  zone-de-dtag.cdb
opensource/isdn4k-utils/isdnlog/client/: Makefile  Makefile.am  Makefile.in  config.h  configure  new
opensource/isdn4k-utils/isdnlog/connect/: conv_address.c  socket.c  socket.h
opensource/isdn4k-utils/isdnlog/isdnconf/: isdnconf.h
opensource/isdn4k-utils/isdnlog/isdnlog/: asn1.c  asn1_address.h  asn1_aoc.c  asn1_aoc.h  asn1_diversion.c  asn1_diversion.h  asn1_generic.h  callerid.conf.5.in  isdn.conf.5.in  isdnformat.5  isdnformat.5.in  isdnlog.5  isdnlog.8.in  isdnlog.h  messages.c  mysqldb.c  ora_load.c  oracle.pc  test_center.c
opensource/isdn4k-utils/isdnlog/isdnrep/: isdnrep.1  isdnrep.1.in  isdnrep.h  rep_main.c
opensource/isdn4k-utils/isdnlog/samples/: isdn.conf.lu  isdn.conf.pl  provider  rate.conf.at  rate.conf.nl
opensource/isdn4k-utils/isdnlog/tools/: NEWS  country.c  dest.h  holiday.c  holiday.h  isdnrate.1  rate.c  telnum.h
opensource/isdn4k-utils/rcapid/: Makefile.in  README  configure.in  mkinstalldirs
opensource/isdn4k-utils/vbox3/: AUTHORS  CHANGES  INSTALL  README  acconfig.h  configure.in
opensource/isdn4k-utils/vbox3/vboxgetty/: Makefile.am  libvboxmodem.c  libvboxmodem.h  lock.c  modem.h  rc.c  rc.h  stringutils.c  stringutils.h  vboxgetty.c  vboxgetty.h  (+1 more)
opensource/zebra-0.94/ripd/: Makefile  Makefile.am  Makefile.in  rip_communication.c  rip_debug.c  rip_interface.c  rip_main.c  rip_parser.c  rip_peer.c  rip_read_config.c  rip_read_config.h  rip_zebra.c  ripd  ripd.c  ripd.h
(+5042 files in other folders)
