dnl Process this file with autoconf to produce a configure script.
AC_INIT(i4lfaq.sgml)

dnl Set default installation directory
if test -r ../.config ; then
	source ../.config
	TARGET_DIR=$CONFIG_FAQDIR
else
	TARGET_DIR=./out
fi

dnl Checks for programs.
AC_PROG_INSTALL
AC_PATH_PROG(C_TAR, tar,,$PATH:/usr/sbin:/sbin:/usr/local/bin)
AC_PATH_PROG(C_ZIP, zip,,$PATH:/usr/sbin:/sbin:/usr/local/bin)
AC_PATH_PROG(C_GZIP, gzip,,$PATH:/usr/sbin:/sbin:/usr/local/bin)
AC_PATH_PROG(C_SGML2HTML, sgml2html,sgml2html-not-found-or-installed,$PATH:/usr/sbin:/sbin:/usr/local/bin)
AC_PATH_PROG(C_SGML2TXT, sgml2txt,sgml2txt-not-found-or-installed,$PATH:/usr/sbin:/sbin:/usr/local/bin)
if test "$C_SGML2HTML" = "sgml2html-not-found-or-installed" ; then
	AC_MSG_ERROR(sgml2html not found please install it.)
fi

dnl Check where to install.
AC_ARG_WITH(dest,[  --with-dest=DIR         set installation directory], \
	TARGET_DIR="$withval",)

AC_SUBST(TARGET_DIR)
AC_OUTPUT(Makefile)
