dnl Process this file with autoconf to produce a configure script.

AC_INIT(capi20.c)
AM_INIT_AUTOMAKE(libcapi20,2.0.6)
AC_PREFIX_DEFAULT(/usr)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AM_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h unistd.h)
AC_CHECK_HEADERS(linux/capi.h)

dnl Checks for library functions.
AC_CHECK_FUNCS(select)

dnl Read the libtool configuration
rm -f conftest
./libtool --config > conftest
. ./conftest
dnl rm -f conftest

AC_SUBST(INSTALL)
AC_OUTPUT(Makefile)
