dnl Process this file with autoconf to produce a configure script.
AC_INIT()
AC_PREFIX_DEFAULT(/usr)

I4LCONFDIR=${I4LCONFDIR:-"/etc/isdn"}
I4LVERSION=${I4LVERSION:-"?.?"}
CONFIG_MANDIR=${CONFIG_MANDIR:-"/usr/man"}

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_AWK
AC_PATH_PROG(SED,sed)

dnl Optional man directory
AC_ARG_WITH(man,
	[  --with-man=DIR          Set manpage dir. [/usr/man]],
	CONFIG_MANDIR="${withval}"
	AC_DEFINE(CONFIG_MANDIR,"${withval}"),
)

AC_SUBST(INSTALL)
AC_SUBST(AWK)
AC_SUBST(SED)
AC_SUBST(I4LCONFDIR)
AC_SUBST(I4LVERSION)
AC_SUBST(CONFIG_MANDIR)
AC_OUTPUT(Makefile ttyI.man isdninfo.man isdn_cause.man isdn_audio.man isdnctrl.man)
