dnl Process this file with autoconf to produce a configure script.
AC_INIT(isdnctrl.c)
AC_PREFIX_DEFAULT(/usr)

I4LCONFDIR=`eval echo ${CONFIG_I4LCONFDIR:-"/etc/isdn"}`
I4LCONFFILE=`eval echo ${CONFIG_CONFFILE:-"/etc/isdn"}`
I4LVERSION=${I4LVERSION:-"?.?"}
CONFIG_SBINDIR=${CONFIG_SBINDIR:-"/sbin"}
CONFIG_MANDIR=${CONFIG_MANDIR:-"/usr/man"}
CONFIG_ISDNCTRL_CONF=${CONFIG_ISDNCTRL_CONF:-"n"}
CONFIG_ISDNCTRL_DWABC_UDP_INFO=${CONFIG_ISDNCTRL_DWABC_UDP_INFO:-"n"}
MANDATE=`grep CHECKIN isdnctrl.man.in | awk '{print $4}'`

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC

dnl Checks for libraries.
AC_TYPE_SIGNAL

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(sys/ioctl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

dnl Optional sbin directory
AC_ARG_WITH(sbin,
	[  --with-sbin=DIR         Set dir where binary is istalled. [/sbin]],
	CONFIG_SBINDIR="${withval}"
	AC_DEFINE(CONFIG_SBINDIR,"${withval}"),
)

dnl Optional man directory
AC_ARG_WITH(man,
	[  --with-man=DIR          Set manpage dir. [/usr/man]],
	CONFIG_MANDIR="${withval}"
	AC_DEFINE(CONFIG_MANDIR,"${withval}"),
)

dnl Optional config-file-option
AC_ARG_ENABLE(cfile,
	[  --enable-cfile          Enable configfile option [no]],
	CONFIG_ISDNCTRL_CONF=y
	AC_DEFINE(CONFIG_ISDNCTRL_CONF,y),
)

AC_SUBST(INSTALL)
AC_SUBST(MANDATE)
AC_SUBST(I4LCONFDIR)
AC_SUBST(I4LCONFFILE)
AC_SUBST(I4LVERSION)
AC_SUBST(CONFIG_ISDNCTRL_CONF)
AC_SUBST(CONFIG_ISDNCTRL_DWABC_UDP_INFO)
AC_SUBST(CONFIG_SBINDIR)
AC_SUBST(CONFIG_MANDIR)
AC_CONFIG_HEADER(config.h)
AC_OUTPUT(Makefile isdnctrl.man .isdnctrl_conf.man)
