##
## $Id: Makefile.am,v 1.5 1998/11/10 18:36:17 michael Exp $
##

## gnu automake options ###################################################

AUTOMAKE_OPTIONS	= foreign

## other directories to process ###########################################

SUBDIRS			= vboxgetty

## extra files to distribute ##############################################

EXTRA_DIST		= AUTHORS CHANGES COPYING INSTALL 

## cleanup ################################################################

CLEANFILES              = *~
MAINTAINERCLEANFILES    = configure aclocal.m4 Makefile.in config.h.in \
			  stamp-h.in
